k8s/authors/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: authors-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: authors
  template:
    metadata:
      labels:
        app: authors
    spec:
      containers:
        - image: authors:0.1
          imagePullPolicy: Never
          name: authors
          ports:
            - containerPort: 8080
