k8s/authors/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: authors-service
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 8080
  selector:
    app: authors
