k8s/authors/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: authors-ingress
  annotations:
    kubernetes.io/ingress.class: 'nginx'
spec:
  rules:
    - http:
        paths:
          - path: /api/v1/authors
            pathType: 'Prefix'
            backend:
              service:
                name: authors-service
                port:
                  number: 80
